# jamjar

./: .gitignore  README.md  pyproject.toml
jamjar/: control.py  cooling.py  load.py  person.py  rack.py  team.py
tests/: test_jamjar.py
