[tool.poetry]
name = "jamjar"
version = "0.1.0"
description = ""
authors = ["Cam Caswell <camcaswell@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
pytz = "^2021.1"
plotly = "^5.1.0"
pandas = "^1.3.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
